--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.80.3",
     "@trpc/client": "npm:@trpc/client",
     "@trpc/next": "npm:@trpc/next",
     "@trpc/react-query": "npm:@trpc/react-query",
     "@trpc/server": "npm:@trpc/server",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.543.0",
     "next": "^15.3.1",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "superjson": "^1.12.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
     "zod": "^3.25.51"
   },
   "devDependencies": {
@@ -24,6 +31,7 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "eslint": "^9.26.0",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   },
   "version": "11.5.1"
