--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.80.3",
     "@trpc/client": "npm:@trpc/client",
@@ -31,6 +32,8 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "eslint": "^9.26.0",
+    "prisma": "^6.15.0",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   },
