--- a/package.json
+++ b/package.json
@@ -28,14 +28,19 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@types/node": "^22.13.5",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
+    "jiti": "^2.5.1",
     "prisma": "^6.15.0",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0"
   },
   "version": "11.5.1"
 }
